# fastapi-redis-comments

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
CLI/: classes_custom.py  client_http.py  func_terminal.py  script.py  terminal.py
app/: main.py
app/routers/: comments.py  users.py
app/schemas/: comment.py  users.py
app/services/: services_comment.py  services_users.py
tests/: conftest.py  test_comment.py  test_users.py
